# Data-Driven-Aerodynamic-Turbine-Design

./: 1D_fitting.py  2D_fitting.py  2D_fitting_pandas.py  5D_fitting.py  CITATION.cff  LICENCE  LICENSE  README.md  README.rst  co_comp_plots.py  compflow_native.py  conversion.py  conversion2.py  cooling.py  cube.stl  data-C.csv  dd_turb_design.py  df_headers.txt  effect_on_geometry_plots.py  explore_geom_params.py  extra_params.py  find_point.py  fit_geometry.py  get_shape.py  integration_test.py  kernel_hyperparameters.txt  kernel_keys.txt  kernel_parameters.csv  kernel_values.txt  legacy_read_in_data.py  loss_breakdown.py  most_common_values.py  non_dim_junk.py  old_plot_vars.py  parallelepipeds.stl  phi_psi_2D_test.py  pitch_to_chord_calc.py  plot_gpr_co2.ipynb  plot_gpr_noisy_targets.ipynb  pyproject.toml  (+7 more)
Data/: 1D_lambda_data_2.csv  2D_phi_psi_data_4.csv  4D_data_1.csv  4D_data_2.csv  4D_data_3.csv  5D_turbine_data_10.csv  5D_turbine_data_3.csv  5D_turbine_data_4.csv  5D_turbine_data_5.csv  5D_turbine_data_6.csv  5D_turbine_data_7.csv  5D_turbine_data_8.csv  5D_turbine_data_9.csv  Lambda_1D.csv  data-B for training.csv  data-D.csv  data-E.csv
Data Complete/: 2D_phi_psi_data_3.csv  2D_phi_psi_data_4.csv  4D_data_10.csv  4D_data_2.csv  4D_data_4.csv  4D_data_5.csv  4D_data_7.csv  4D_data_9.csv  5D_turbine_data_1.csv  5D_turbine_data_10.csv  5D_turbine_data_3.csv  5D_turbine_data_5.csv  5D_turbine_data_8.csv  Co_variation.csv  Lambda_1D.csv  Lambda_1D_results_2.csv  test543.csv
HPC_scripts/: collate_results_edited.py  extract_more_data.py  post_process_edited.py
(+151 files in other folders)
