[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "turbine_design"
version = "0.0.1"
authors = [
  { name="Tom Tyler", email="tom-tyler@outlook.com" },
]
description = "Turbine design tool"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = " "
"Bug Tracker" = " "