[tool.poetry]
name = "turbine_design"
version = "0.1.2"
description = ""
authors = ["Tom Tyler <tom-tyler@outlook.com>"]
readme = "README.rst"
packages = [{include = "turbine_design"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
