[tool.poetry]
name = "turbine_design"
version = "1.0.2"
description = "A data driven tool for turbine aerodynamic design"
license = "MIT"
authors = ["Tom Tyler <tom-tyler@outlook.com>"]
readme = "README.rst"
repository = "https://github.com/tom-tyler/turbine_design"
keywords = ["turbine", "turbomachinery", "Gaussian"]
packages = [{include = "turbine_design"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
